@@ -1,6 +1,7 @@
 package com.zxp.nowcodercommunity.controller;
 
 import com.zxp.nowcodercommunity.annotation.AutoCreateTime;
+import com.zxp.nowcodercommunity.constant.DiscussPostConstant;
 import com.zxp.nowcodercommunity.pojo.Comment;
 import com.zxp.nowcodercommunity.pojo.DiscussPost;
 import com.zxp.nowcodercommunity.pojo.Page;
@@ -36,6 +37,7 @@ public class DiscussPostController {
     private final DiscussPostService discussPostService; // 帖子的service
     private final UserService userService; // User
     private final CommentService commentService;
+
     public DiscussPostController(DiscussPostService discussPostService, UserService userService, CommentService commentService) {
         this.discussPostService = discussPostService;
         this.userService = userService;
@@ -44,7 +46,7 @@ public class DiscussPostController {
 
     @AutoCreateTime // 设置创建时间的字段
     @PostMapping("discuss/add")
-     public Result<Object> addDiscussPost(@RequestBody DiscussPost discussPost) throws Exception {
+    public Result<Object> addDiscussPost(@RequestBody DiscussPost discussPost) throws Exception {
         // 从Security上下文里面拿到useId
         discussPost.setUserId(SecurityUtil.getUserId());
         discussPost.setType((byte) 0);
@@ -58,27 +60,28 @@ public class DiscussPostController {
             throw new Exception("插入失败");
         }
         return Result.success("插入成功");
-     }
+    }
 
     /**
-     *  显示用户帖子的详情状况
+     * 显示用户帖子的详情状况
+     *
      * @param id
      * @return
      */
     @GetMapping("discuss/detail/{id}")
     public Result<Object> getDiscussPost(@PathVariable Integer id) {
-         Map<String, Object> data = new HashMap<>();
+        Map<String, Object> data = new HashMap<>();
         // 根据帖子的id查询帖子
-         DiscussPost post = discussPostService.findPostById(id);
-         log.info("post: {}", post);
-         data.put("discussPost", post);
-         // 查询对应的用户
-         User user = userService.getUserById(post.getUserId());
-         UserVo userVo = new UserVo();
-         BeanUtils.copyProperties(user, userVo);
-         data.put("user", userVo);
-         return Result.success(data);
-     }
+        DiscussPost post = discussPostService.findPostById(id);
+        log.info("post: {}", post);
+        data.put("discussPost", post);
+        // 查询对应的用户
+        User user = userService.getUserById(post.getUserId());
+        UserVo userVo = new UserVo();
+        BeanUtils.copyProperties(user, userVo);
+        data.put("user", userVo);
+        return Result.success(data);
+    }
 
     // 实现帖子的回复功能
     // 回帖也就是将自己的评论显示在被评论用户下面
@@ -95,11 +98,15 @@ public class DiscussPostController {
         page.setCurrent(current); // 当前起始页
         page.setRows(discussPostService.findPostById(id).getCommentCount()); // 得到总的评论数量
 
+        log.info("page: {}", page);
+        log.info("offset: {}", page.getOffset());
+
 
         // 获取到所有的comment数据
         // id为帖子的id
         List<Comment> commentList = commentService.findCommentsByEntity(id, ENTITY_TYPE_POST, page.getOffset(),
                 page.getLimit());
+
 
         // 构造数据
         List<Map<String, Object>> commentVoList = commentList.parallelStream().map(comment -> {
@@ -112,7 +119,10 @@ public class DiscussPostController {
             // 作者
             User user = userService.getUserById(comment.getUserId());
             UserVo userVo = new UserVo();
-            BeanUtils.copyProperties(user, userVo);
+            // 注意 必须检查user是否为null
+            if (user != null) {
+                BeanUtils.copyProperties(user, userVo);
+            }
             commentVo.put("user", userVo);
 
             // 回复
@@ -121,22 +131,26 @@ public class DiscussPostController {
             List<Comment> replyList = commentService
                     .findCommentsByEntity(comment.getId(), ENTITY_TYPE_COMMENT, 0, Integer.MAX_VALUE);
 
-            replyList.parallelStream().map(reply ->{
+            List<Map<String, Object>> replyVoList = replyList.parallelStream().map(reply -> {
                 Map<String, Object> replyVo = new HashMap<>();
                 replyVo.put("reply", reply);
                 User replyUser = userService.getUserById(reply.getUserId());
                 UserVo replyUserVo = new UserVo();
-                BeanUtils.copyProperties(replyUser, replyUserVo);
+                if (replyUser != null) {
+                    BeanUtils.copyProperties(replyUser, replyUserVo);
+                }
                 replyVo.put("user", replyUserVo);
 
                 // 回复的目标
                 User targetUser = userService.getUserById(reply.getTargetId()); // 被回复的信息
                 UserVo targetUserVo = new UserVo();
-                BeanUtils.copyProperties(targetUser, targetUserVo);
+                if (targetUser != null) {
+                    BeanUtils.copyProperties(targetUser, targetUserVo);
+                }
                 replyVo.put("target", targetUserVo);
                 return replyVo;
-            }).collect(Collectors.toList());
-            commentVo.put("replys", replyList); // 把某个评论下面的评论封装起来
+            }).toList();
+            commentVo.put("replys", replyVoList); // 把某个评论下面的评论封装起来
             // 评论的评论的数量
             Integer replyCount = commentService.findCommentCountByEntity(comment.getId(), ENTITY_TYPE_COMMENT);
             commentVo.put("count", replyCount);
@@ -150,6 +164,7 @@ public class DiscussPostController {
 
     /**
      * 根据用户id分页查询
+     *
      * @return
      */
     @GetMapping("profile/{id}/post")
@@ -168,17 +183,63 @@ public class DiscussPostController {
         // 得到这个用户的所有帖子
         List<DiscussPost> posts = discussPostService.findPostsById(userId, page.getOffset(), page.getLimit(), 0);
         log.info("posts: {}", posts);
-        List<Map<String,Object>> postsVo = posts.parallelStream().map(post -> {
+        List<Map<String, Object>> postsVo = posts.parallelStream().map(post -> {
             Map<String, Object> postVo = new HashMap<>();
             postVo.put("post", post);
             User user = userService.getUserById(post.getUserId());
             UserVo userVo = new UserVo();
-            BeanUtils.copyProperties(user, userVo);
+            if (user != null) {
+                BeanUtils.copyProperties(user, userVo);
+            }
             postVo.put("user", userVo);
             return postVo;
         }).toList();
         log.info("postVo" + postsVo);
 
         return Result.success(postsVo);
+    }
+
+    /**
+     * 根据用户id分页查询post数量
+     *
+     * @param userId 用户id
+     * @return
+     */
+    @GetMapping("profile/{id}/post/count")
+    public Result<Integer> getDiscussPostCount(@PathVariable("id") int userId) {
+        Integer countById = discussPostService.findCountById(userId);
+        return Result.success(countById);
+    }
+
+    // 置顶
+    @PutMapping("/discuss/{id}/top")
+    public Result<Object> setTop(@PathVariable("id") int id) {
+        // 更新帖子的type即可
+        Integer rows = discussPostService.updatePostType(id, DiscussPostConstant.TYPE_TOP);
+        if (rows < 1) {
+            Result.error("更新失败");
+        }
+        log.info("rows: {}", rows);
+        return Result.success();
+    }
+
+    @PostMapping("/discuss/{id}/wonderful")
+    public Result<Object> setWonderful(@PathVariable("id") int id) {
+        Integer rows = discussPostService.updateStatus(id, (byte) 1);
+        if (rows < 1) {
+            Result.error("更新失败");
+        }
+        return Result.success();
+    }
+
+    // 删除
+    @PutMapping("/discuss/{id}/delete")
+    public Result<Object> setDelete(@PathVariable("id") int id) {
+        Integer rows = discussPostService.updateStatus(id, (byte) 2);
+        if (rows > 1) {
+            return Result.success("删除成功！");
+        }
+        log.info("rows: {}", rows);
+        return Result.error("删除失败！");
     }
 }
